update admin index, fix function manage_teacher

--- a/Areas/Admin/Views/HomeAdmin/Add_Class.cshtml
+++ b/Areas/Admin/Views/HomeAdmin/Add_Class.cshtml
@@ -61,11 +61,11 @@
     </div>
     <div class="col-sm-12 col-md-6 col-xl-4 mb-3 mt-3">
         <label for="" class="form-label">Thời gian bắt đầu:</label>
-        <input type="time" class="form-control" id="thoiGianBatDau" placeholder="Số tiết học" name="ThoiGianBatDau">
+        <input type="time" class="form-control" id="thoiGianBatDau" name="ThoiGianBatDau">
     </div>
     <div class="col-sm-12 col-md-6 col-xl-4 mb-3 mt-3">
         <label for="" class="form-label">Thời gian kết thúc:</label>
-        <input type="time" class="form-control" id="thoiGianKetThuc" placeholder="Số tiết học" name="ThoiGianKetThuc">
+        <input type="time" class="form-control" id="thoiGianKetThuc" name="ThoiGianKetThuc">
     </div>
     <div class="col-sm-12 col-md-6 col-xl-4 mb-3 mt-3">
         <label>Ngày học:</label>
