--- a/Areas/Admin/Views/HomeAdmin/Manage_Student.cshtml
+++ b/Areas/Admin/Views/HomeAdmin/Manage_Student.cshtml
@@ -6,7 +6,7 @@
 
 }
 
-<div class="container">
+<div class="container-fluid">
     <div class="row">
         <div class="col display-5" style="text-align:center">Quản lý học viên</div>
     </div>
@@ -41,8 +41,8 @@
             @ViewBag.ErrorMessage
         </div>
     </div>
-    <div class="row">
-        <table class="table " style="text-align:center">
+    <div class="container">
+        <table class="table table-responsive table-bordered" style="text-align:center">
             <thead class="bg-info bg-gradient">
                 <tr>
                     <th>Mã</th>
@@ -62,7 +62,7 @@
             <tbody>
                 @foreach (var item in Model)
                 {
-                    <tr>
+                    <tr class="@(!item.Trang_thai_hoc_phi ? "table-danger" : "")">
                         <td>@item.Ma_hoc_vien</td>
                         <td>@item.Ho_va_ten</td>
                         <td>@item.NgaySinhFormatted</td>
