--- a/Areas/Student/Views/HomeStudent/indexHomeStudent.cshtml
+++ b/Areas/Student/Views/HomeStudent/indexHomeStudent.cshtml
@@ -5,73 +5,84 @@
     ViewBag.Active = "homestudent";
 }
 <!DOCTYPE html>
-
-<html>
+<html lang="vi">
 <head>
-    <link rel="stylesheet" type="text/css" href="~/Content/Study.css" />
-    @*<script>
-        $(document).ready(function () {
-            $("#customButtonStudy").click(function () {
-                $("#actionStudyLink")[0].click();
-            });
-        });
-    </script>*@
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <meta name="viewport" content="width=device-width" />
-    <title>Trang Chủ</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Music School</title>
+    <!-- Bootstrap 5 CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- Custom CSS -->
+    <style>
+        /* Orange background with musical notes */
+        .header {
+            background-image: url("https://images.squarespace-cdn.com/content/v1/56ec36287c65e44921a975cb/e99f5772-6f2d-4e8d-a523-27551ff586c0/BiwQX8DZ.jpeg?format=1500w");
+            background-size: cover;
+            background-position: center;
+            background-attachment:fixed;
+            height: 100vh;
+        }
+
+        /* Circular image frame */
+        .circle {
+            border-radius: 50%;
+            overflow: hidden;
+            width: 250px;
+            height: 250px;
+            border: 10px solid white;
+        }
+
+        /* Offer text */
+        .offer {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: white;
+            font-size: 2rem;
+            font-weight: bold;
+            text-shadow: 2px 2px 5px black;
+        }
+    </style>
 </head>
 <body>
-    <div class="bg-white ">
-        @*<h2 class="text-primary">Phố Thị Music - Nơi tài năng toả sáng </h2>
-            <br />
-            <h4 class="text-warning">
-                Kính gửi mọi người yêu nghệ thuật,
-                <br />
-                Chúng ta đang mở cửa cho một cuộc phiêu lưu sáng tạo đầy thú vị và cơ hội tham gia vào một khoá học nghệ thuật đặc biệt. Đây là cơ hội để bạn thể hiện tài năng, phát triển kỹ năng và khám phá bản thân qua nghệ thuật.
 
-            </h4>*@
-        <div class="row row-cols-2">
-            <div class="col-sm-8">
-                <img src="~/source/maxresdefault.jpg" class="img-fluid mx-auto d-block" />
-            </div>
-            <div class="col-sm-4">
-                <h1 class="display-2">Phố Thị Music</h1>
-                <div class="row-cols-sm-auto">
-                    <div class="col-sm">
-                        <p style="font-size:25px">
-                            Với đội ngũ giảng viên với nhiều năm kinh nghiệm giảng dạy, sự tận tâm, năng nổ đi kèm
-                            với môi trường năng động, thoải mái cho quá trình học tập và phát triển của học viên,
-                            chúng tôi tự tin có thể cam kết chất lượng đầu ra đào tạo cho học viên, luôn tạo điều kiện để học viên có thể thoả sức
-                            sáng tạo và cháy hết mình với âm nhạc!
-                        </p>
-                        <div class="row-cols-sm-auto">
-                            <div class="col-sm-8"></div>
-                            <div class="col-sm-4">
-                                <div style="display: flex; align-items: center; width:300px">
-                                    <button class="btn btn-outline-success btn-lg" id="customButtonStudy">Bắt đầu nào!</button>
-                                    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-                                    <script>
+    <!-- Header section -->
+    <div class="header">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-md-6">
+                    <h1 class="display-1 text-white">Phố Thị Music</h1>
+                    <p class="lead text-white">
+                        Với đội ngũ giảng viên với nhiều năm kinh nghiệm giảng dạy, sự tận tâm, năng nổ đi kèm
+                        với môi trường năng động, thoải mái cho quá trình học tập và phát triển của học viên,
+                        chúng tôi tự tin có thể cam kết chất lượng đầu ra đào tạo cho học viên, luôn tạo điều kiện để học viên có thể thoả sức
+                        sáng tạo và cháy hết mình với âm nhạc!
+                    </p>
+                    <button class="btn btn-outline-primary btn-lg" id="customButtonStudy">Bắt đầu nào!</button>
+                    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+                    <script>
                                               $(document).ready(function() {
                                                 $('#customButtonStudy').click(function() {
                                                   window.location.href = '@Url.Action("StudyStudent", "HomeStudent", new { area = "Student" })';
                                                 });
-                                              }); 
-                                    </script>
-                                </div>
-                            </div>
-                        </div>
+                                              });
+                    </script>
+                </div>
+                <div class="col-md-6">
+                    <div class="circle mx-auto">
+                        <img src="~/source/logo.jpg" alt="Ukulele" class="img-fluid">
                     </div>
+                   
                 </div>
             </div>
         </div>
-        <div class="row row-cols-2">
-            <div class="col-sm-4">
-                <h3>This is slide 1</h3>
-            </div>
-            <div class="col-sm-8">
-                <img src="~/source/1180w-463h_010920-riviera-art-gallery-780x440.jpg" class="img-fluid mx-auto d-block" />
-            </div>
-        </div>
     </div>
+   
+    <!-- Bootstrap 5 JS -->
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
+
